syntax = "proto3";

package c1.connector.v2;

import "buf/validate/validate.proto";

option go_package = "github.com/conductorone/baton-sdk/pb/c1/connector/v2";

message ExternalLink {
  string url = 1 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 1024
    uri: true
    prefix: "https://"
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
}
